syntax = "proto3";

package idns.node.rpc;

message RpcCommand{
    string service_name = 1;
    string method_name = 2;
    map<string,string> headers = 3;
    bytes data = 5;
    string nonce = 99;
}

message RpcCommandResponse{
    int32 status = 1;
    map<string,string> headers = 3;
    bytes data = 5;
    string nonce = 99;
}


service RpcService {

    rpc request(RpcCommand) returns (RpcCommandResponse){}
}
